# django-rest-architecture

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  entrypoint.sh  pyproject.toml
core/api/: schemas.py  urls.py
core/api/v1/: urls.py
core/api/v1/companies/: handlers.py  schemas.py
core/api/v1/companies/schemas/: company_type_schema.py
core/apps/common/: models.py
core/apps/companies/: admin.py  apps.py
core/apps/companies/entities/: company_types.py
core/apps/companies/migrations/: 0001_initial.py
core/apps/companies/models/: __init__.py  company_types.py
core/apps/companies/services/: company_types.py
core/core/: settings.py
core/project/: asgi.py  urls.py  wsgi.py
core/project/settings/: main.py
docker_compose/: app.yaml  storages.yaml
tests/factories/: company_type.py
tests/services/: conftest.py  test_company_types.py
