[tool.poetry]
name = "django-rest-architecture"
version = "0.1.0"
description = ""
authors = ["ImperatorNeron <katebarspk@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.1"
psycopg2 = "^2.9.9"
django-environ = "^0.11.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
